--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href = "../Homework1/index.css">
+    <link rel="stylesheet" href = "diamond.css">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-</head>
+   </head>
 <body> 
+   
         <!-- to do add header -->
         <nav class = "navmain">
-          <div class = "logo"> <h1>LOGO</h1></div>
-          <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Courses</a></li>
-               <li><a href="#">Enroll</a></li>
-               <li><a href="#">Service</a></li>
-               <li><a href="#">About</a></li>
-          </ul>
-          <button div class = "button1" type = "button">Login</button>
-          <button div class = "button2" type = "button">Register</button>
-        </nav>
+          <div class = "logo"> 
+            <h1>LOGO</h1></div>
+            <nav class ="nav1">
+         <button >Home</button>
+        <button >Course</button>
+        <button >Enroll</button>
+        <button >Service</button>
+        <button >About</button>
+      </nav>
+         <button div class = "button1" type = "button">Login</button>
+         <button div class = "button2" type = "button">Register</button>
+       
+         </nav>
      </main>
      <div class ="container">
 <header>
     <h1>Most Popular Courses</h1>
      <p>Choose from hundred of courses from specialist organiations</p>
         </header>
-        <nav>
+        <nav class = "nav2">
         <button class = "active">Web Design</button>
         <button >Development</button>
         <button >Graphic Design</button>
